--- a/.github/workflows/10.b-caller-workflow.yml
+++ b/.github/workflows/10.b-caller-workflow.yml
@@ -16,9 +16,7 @@ on:
                 required: true
 jobs:
     callToWd:
-        runs-on: ubuntu-latest
-        steps:
-            - uses: ./.github/workflows/10.b-caller-workflow.yml
-              with:
-                dry-run: ${{ inputs.dry-run }}
-                target: ${{ inputs.target }}
+        uses: ./.github/workflows/10.b-caller-workflow.yml
+        with:
+            dry-run: ${{ inputs.dry-run }}
+            target: ${{ inputs.target }}
