--- a/.github/workflows/10.c-caller-far-workflow.yml
+++ b/.github/workflows/10.c-caller-far-workflow.yml
@@ -1,4 +1,4 @@
-name: WF Reutilizable
+name: Usar WF Reutilizable C
 on:
     workflow_dispatch:
         inputs:
@@ -8,15 +8,11 @@ on:
                 default: false
             target:
                 description: "Which environment the workflow will target"
-                type: choice
-                options:
-                    - int
-                    - prod
-                default: 'true'
+                type: environment
                 required: true
 jobs:
-    callToWd:
-        uses: ./.github/workflows/10.a-io-workflow.yml
+    callToFarWd:
+        uses: madBabel/test-external-wf/.github/workflows/10.a-io-workflow-yusepa.yml
         with:
             dry-run: ${{ inputs.dry-run }}
             target: ${{ inputs.target }}
