--- a/.github/workflows/10.c-caller-far-workflow.yml
+++ b/.github/workflows/10.c-caller-far-workflow.yml
@@ -12,7 +12,7 @@ on:
                 required: true
 jobs:
     callToFarWd:
-        uses: madBabel/test-external-wf/.github/workflows/10.a-io-workflow-yusepa.yml
+        uses: madBabel/test-external-wf/.github/workflows/10.a-io-workflow-yusepa.yml@v0
         with:
             dry-run: ${{ inputs.dry-run }}
             target: ${{ inputs.target }}
